Don't crash when switching identities.

Don't create a Generic header for the organization, as then, it will
assert when you try to retrieve the header as a proper Organization
header.

BUG: 237314

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1127000